# stereo_aprilgrid_calibration

aprilgrid_calibration_core/: CMakeLists.txt  README.md  package.xml
aprilgrid_calibration_core/config/: calibration_params.yaml
aprilgrid_calibration_core/include/aprilgrid_calibration_core/: SE3_tool.hpp  acalibrator.hpp  camera_model.hpp  frame_collector.hpp  frame_grabber.hpp  mono_calibrator.hpp  mono_calibrator_ds.hpp  projections_double_sphere.hpp  stereo_calibrator.hpp  stereo_calibrator_ds.hpp
aprilgrid_calibration_core/launch/: calibration.launch.py
aprilgrid_calibration_core/src/: aprilgrid_calibration_node.cpp  calibration_manager_node.cpp  frame_collector.cpp  frame_grabber.cpp  mono_calibrator.cpp  mono_calibrator_ds.cpp  projections_double_sphere.cpp  stereo_calibrator.cpp  stereo_calibrator_ds.cpp
aprilgrid_calibration_hmi/: package.xml  setup.cfg  setup.py
aprilgrid_calibration_hmi/aprilgrid_calibration_hmi/: calibration_gui.py
aprilgrid_calibration_hmi/launch/: calibration_gui.launch.py
aprilgrid_detector/: CMakeLists.txt  package.xml
aprilgrid_detector/launch/: aprilgrid_detector.launch.py
aprilgrid_detector/src/: aprilgrid_detector_node.cpp
aprilgrid_detector_interfaces/: CMakeLists.txt  package.xml
aprilgrid_detector_interfaces/msg/: AprilTag.msg  AprilTagArray.msg  CalibrationStats.msg
aprilgrid_detector_interfaces/srv/: CalibrateCamera.srv  CalibrateStereo.srv  ClearFrames.srv  StartCollection.srv  StopCollection.srv
double_sphere_corrector/: CMakeLists.txt  package.xml
double_sphere_corrector/calib/: camera_1.yaml  stereo_calibration.yaml
double_sphere_corrector/include/: denseStereo.hpp  sphericRectification.hpp
double_sphere_corrector/launch/: ds_corrector.launch.py
double_sphere_corrector/src/: denseStereo.cpp  double_sphere_corrector_node.cpp  sphericRectification.cpp
fisheye_corrector/: package.xml  setup.cfg  setup.py
fisheye_corrector/calib/: camera_0.yaml  camera_1.yaml  stereo_calibration.yaml
fisheye_corrector/fisheye_corrector/: dscamera.py  fisheye_corrector_node.py  fisheye_disparity_node.py
fisheye_corrector/launch/: fisheye_corrector.launch.py
